Fix CSS compatibility warnings - add standard appearance property

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             -webkit-text-size-adjust: 100%;
             -webkit-appearance: none;
             -moz-appearance: textfield;
+            appearance: none;
         }
         
         /* Additional zoom prevention for all input elements */
@@ -31,6 +32,7 @@
             -webkit-text-size-adjust: 100%;
             -webkit-appearance: none;
             -moz-appearance: textfield;
+            appearance: none;
         }
         
         /* Prevent zoom on focus for mobile devices */
